# anu_ctlab_io

./: .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  _typos.toml  justfile  pyproject.toml  tox.ini
.github/workflows/: ci.yml  publish-cli.yml  publish.yml
benches/: test_write.py
cli/: LICENSE.md  README.md  pyproject.toml
cli/src/anu_ctlab_io_cli/: _cli.py
docs/: conf.py  index.rst  introduction.rst
examples/: create_large_netcdf.py
examples/create_large_netcdf/: .gitignore  README.md  create_large_netcdf.pbs.sh  create_large_netcdf_mpirun.pbs.sh  pyproject.toml
examples/create_large_netcdf/src/create_large_netcdf/: __init__.py  mpirun.py  pbscluster.py
src/anu_ctlab_io/: __init__.py  _dataset.py  _datatype.py  _parse_history.py  _voxel_properties.py  dataset.py  datatype.py  voxel_properties.py
src/anu_ctlab_io/netcdf/: __init__.py  _writer.py  dict_transformer.py  parse_history.py
src/anu_ctlab_io/raw/: __init__.py  _writer.py
src/anu_ctlab_io/zarr/: __init__.py  _array_writer.py  _layout.py  _multiscale.py  _ome_writer.py  _writer.py
tests/: conftest.py  test_anu_ctlab_io_netcdf.py  test_cli_scheduler.py  test_dataset_history.py  test_dataset_id.py  test_dataset_to_path.py  test_datatype.py  test_dictionary_transformer.py  test_manual_read.py  test_mask.py  test_netcdf.py  test_netcdf_write.py  test_parse_history.py  test_raw_write.py  test_roundtrip.py  test_sanitise_attribute.py  test_write_compute_false.py  test_zarr.py  test_zarr_write.py
tests/data/: generate_test_data_zarr.py  tomoLoRes_SS.nc
tests/data/tomoHiRes.zarr/: c.1.0.0  c.2.0.0  c.3.0.0
tests/data/tomoHiRes_SS_nc/: block00000000.nc  block00000001.nc  block00000002.nc  block00000003.nc  block00000004.nc  block00000005.nc
tests/data/tomoLoRes.zarr/: c.0.0.0  c.1.0.0  c.2.0.0  c.3.0.0
tests/data/tomoLoRes_SS_AM.zarr/0/c/0/0/: 0
tests/schema/: anu_ctlab_zarr_1_0_example.json
