[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anu-ctlab-io"
version = "0.0.1"
description = "python I/O for the ANU CTLab array storage format(s)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dask[array]>=2025.2.0",
    "h5netcdf>=1.6.1",
    "xarray>=2025.1.2",
    "numpy>=2.2.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "ruff>=0.9.5",
    "pytest>=8.3.5",
    "netcdf4>=1.7.2",
]

[tool.pytest.ini_options]
filterwarnings = [
    # known behaviour, caused by numpy changes which are ABI compatible with older versions,
    # but which cython flags as a warning despite everything being fine
    # See https://github.com/cython/cython/issues/2498, https://github.com/cython/cython/issues/4366
    'ignore:numpy.ndarray size changed, may indicate binary incompatibility.'
]
addopts = [
    "--import-mode=importlib" # recommended by pytest
]

[tool.tox]
envlist = ["py313"]

[tool.tox.env.py313]
deps = ["pytest"]
commands = [
    ["pytest"],
]
