[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anu-ctlab-io"
version = "0.2.0"
description = "python I/O for the ANU CTLab array storage format(s)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dask[array]>=2025.2.0",
    "xarray>=2025.1.2",
    "numpy>=2.2.3",
    "lark>=1.2.2",
    "dictdiffer>=0.9.0",
    "deprecation>=2.1.0",
]
default-optional-dependency-keys = [
    "netcdf",
    "zarr",
]

license = "MIT"
license-files = ["LICENSE.md"]
authors = [
    {name = "Bogdan Maviichuk", email = "bogdan.maviichuk@anu.edu.au"},
    {name = "Lachlan Deakin", email = "lachlan.deakin@anu.edu.au"},
    {name = "Owen Dowley", email = "owen.dowley@anu.edu.au"},
]
maintainers = [
    {name = "Owen Dowley", email = "owen.dowley@anu.edu.au"},
]

[project.optional-dependencies]
netcdf = [
    "netcdf4>=1.7.2",
]
zarr = [
    "zarr>=3.1.1",
]

[project.urls]
# FIXME: Add Homepage on v1.0.0 release
Repository = "https://github.com/MaterialsPhysicsANU/anu_ctlab_io"
Issues = "https://github.com/MaterialsPhysicsANU/anu_ctlab_io/issues"
Changelog = "https://github.com/MaterialsPhysicsANU/anu_ctlab_io/master/CHANGELOG.md"

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "ruff>=0.9.5",
    "pytest>=8.3.5",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.pytest.ini_options]
filterwarnings = [
    # known behaviour, caused by numpy changes which are ABI compatible with older versions,
    # but which cython flags as a warning despite everything being fine
    # See https://github.com/cython/cython/issues/2498, https://github.com/cython/cython/issues/4366
    'ignore:numpy.ndarray size changed, may indicate binary incompatibility.'
]
addopts = [
    "--import-mode=importlib", # recommended by pytest
    "-ra",
    "--strict-config",
    "--strict-markers"
]
minversion = "7.0"
testpaths = ["tests"]
log_cli_level = "INFO"
xfail_strict = true


[tool.tox]
env_list = ["3.12", "3.13"]

[tool.tox.env_run_base]
deps = ["pytest"]
commands = [
    ["pytest"],
]

[tool.mypy]
strict = true
warn_unreachable = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

[tool.ruff.lint]
extend-select = [
  "B", # flake8-bugbear
  "I", # isort
  "UP", # pyupgrade
]

[[tool.mypy.overrides]]
module = ["dictdiffer.*"]
follow_untyped_imports = true
